# control-gamepad-keypad

./: .gitignore  CMakeLists.txt
firmware/: .gitignore  CMakeLists.txt  README.md  build.sh  env_setup.sh  example.cpp
firmware/lib/picogamepad/: CMakeLists.txt  picogamepad.h
firmware/lib/picogamepad/picogamepad-board/: board.h
firmware/lib/picogamepad/picogamepad-led/: PicoLED.cpp  PicoLED.h  PicoLED.pio
firmware/lib/picomachine/: CMakeLists.txt  README.md  picomachine.h
firmware/lib/picomachine/debug/: debug.h
firmware/lib/picomachine/event/: CMakeLists.txt  Design.md  event.cpp  event.h  event.tpp  event_dispatcher.cpp  event_dispatcher.h  event_factory.cpp  event_factory.h
firmware/lib/picomachine/event/tests/: CMakeLists.txt  gtest_pmevent.cpp  gtest_pmevent.h  gtest_pmevent_factory.cpp  gtest_pmevent_factory.h
firmware/lib/picomachine/monitor/: CMakeLists.txt  monitor.cpp  monitor.h
firmware/src/: CMakeLists.txt  PicoLED.cpp  PicoLED.h  main.cpp
hardware/: .gitignore
include/: picogamepad.h  tusb_config.h
scripts/windows-powershell/: usbserial.ps1
src/: main.cpp  usb_descriptors.cpp  usb_descriptors.h
